[package]
edition = "2018"
name = "overlay"
version = "0.1.35"
description = "Overlay protocol library"

[dependencies]
arrayref = "0.3"
async-trait = "0.1"
base64 = "0.13"
dashmap = "4.0"
failure = "0.1"
hex = "^0"
log = "0.4"
rand = "0.7"
sha2 = "0.8"
tokio = { version = "1.6", features = ["rt-multi-thread"] }

ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", branch = "original", default-features = false }
adnl = { git = "https://github.com/broxus/ton-labs-adnl", default-features = false, features = ["node"] }
rldp = { git = "https://github.com/broxus/ton-labs-rldp.git" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
lockfree = { git = "https://github.com/tonlabs/lockfree.git" }

