[package]
edition = "2018"
build = "./common/build/build.rs"
name = "overlay"
version = "0.1.35"
description = "Overlay protocol library"

[dependencies]
arrayref = "0.3.5"
async-trait = "0.1.22"
base64 = "0.11.0"
failure = "0.1.6"
hex = "^0"
log = "0.4.8"
rand = "0.7.2"
sha2 = "0.8.0"
tokio = { version = "1.3.0", features = ["rt-multi-thread"] }

ton_api = { git = "https://github.com/tonlabs/ton-labs-tl.git", package = "ton_api" }
adnl = { git = "https://github.com/tonlabs/ton-labs-adnl.git", features = ["node"] }
rldp = { git = "https://github.com/broxus/ton-labs-rldp.git", branch = "new-raptorq" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
lockfree = { git = "https://github.com/tonlabs/lockfree.git" }

[features]
telemetry = []

